--- a/resources/styles.css
+++ b/resources/styles.css
@@ -54,7 +54,13 @@ h1.resumePage {
     text-decoration: underline;
     text-decoration-color: var(--pink);
     text-align: left;
-    animation: slideUp 1.5s 1s ease-out forwards;
+    animation: slideUp 1s 1.5s ease-out forwards;
+}
+
+h1.contactPage {
+    text-decoration: underline;
+    text-decoration-color: var(--pink);
+    animation: slideUp 1s ease-out forwards;
 }
 
 .first {
@@ -98,6 +104,7 @@ a.resumePage {
 }
 
 .center {
+    opacity: 0;
     width: 100%;
     margin-top: 50px;
     font-size: 50px;
@@ -121,11 +128,11 @@ a.resumePage {
 }
 
 .left {
-    animation: slideLeft 1s ease-out forwards;
+    animation: slideLeft 1s 1s ease-out forwards;
 }
 
 .right {
-    animation: slideRight 1s ease-out forwards;
+    animation: slideRight 1s 1s ease-out forwards;
 }
 
 #resume {
